Made small changes to fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ h2 {
 
 #mugshot {
 	max-height: 200px;
-	margin: 0 auto 30;
+	margin: 0px auto 30px;
 }
 
 .about h2 {
